# positive_mahjong

./: .gitattributes  .gitignore  .gitlab-ci.yml  AndroidManifest.xml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  ThirdPartyLicense-Rust.html  ThirdPartyLicense.html  about.hbs  about.toml  about_json.hbs  android_build_script.py  build.rs  build_script.py  build_script_computer.py  build_script_license.py  deny.toml  license_check.py  mkdocs.yml  pmj_server_config.json  taplo.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request  feature_request.yaml
.github/workflows/: cargo-audit.yaml  cargo-deny.yaml  cargo-msrv.yaml  commit-build-android.yaml  commit-build.yaml  commit-check.yaml  commit-sync-repo.yaml  docs-build.yaml  release-build.yaml  release.yaml
.github/workflows/instdep/: action.yaml
.gitlab/issue_templates/: bug_report.md  bug_report.yaml  feature_request.md
.zed/: settings.json
READMEs/: README_en.md
android/: AndroidManifest.xml  gradle.properties
android/app/: build.gradle.kts
android/app/src/main/kotlin/io/github/positive_mahjong/tw0hank0/: MainActivity.kt
assets/: icon.kra
auto_generated/: ThirdPartyLicense-Rust.html  ThirdPartyLicense-Rust.json  ThirdPartyLicense-Rust.md  licenses_rust.json  licenses_rust.md
ci/: get_datetime.py  get_version.py  zip_files.py
crates/old_pmj_client/src/: client.rs  main.rs
crates/old_pmj_client/src/android/: mod.rs
crates/old_slint_client/: Cargo.toml
crates/pmj_client_cross/godot/: icon.png.import  pmj_client_cross_lib.gdextension  pmj_client_cross_lib.gdextension.uid  project.godot
crates/pmj_client_cross/godot/fonts/: NotoSansTC-Regular.ttf.import  NotoSansTC-VariableFont_wght.ttf.import  main_font.tres
crates/pmj_client_cross/godot/scenes/: home_page.tscn
crates/pmj_client_cross/rust/: Cargo.toml
crates/pmj_client_cross/rust/src/: lib.rs
crates/pmj_client_desktop/: Cargo.toml
crates/pmj_client_desktop/src/: circular.rs  client.rs  easing.rs  main.rs
crates/pmj_gamemodes/: Cargo.toml
crates/pmj_gamemodes/src/base/: mod.rs  mode.rs
crates/pmj_server/: Cargo.toml
crates/pmj_server/src/: main.rs
crates/pmj_server/src/gui/: base.rs  gui_main.rs
crates/pmj_shared/: Cargo.toml
crates/pmj_shared/src/: lib.rs  shared.rs
docs/: .gitignore  book.toml
docs/src/: SUMMARY.md  compile.md  file_struct.md  index.md  install.md  intro.md  license.md
docs/src/license/: index.md  license_assets.md  res.md
pmj_client/: Cargo.toml  build.rs
pmj_client/old_slint_client/: Cargo.toml  build.rs
pmj_client/old_slint_client/src/: main.rs
pmj_client/old_slint_client/ui/: main.slint
pmj_client/src/: client.rs  lib.rs  main.rs
pmj_client/src/android/: clipboard.rs  entry.rs  java.rs  scene.rs
pmj_client/ui/: main.slint
pmj_gamemode_guis/: Cargo.toml
pmj_gamemode_guis/src/: base.rs  gui_main.rs
pmj_gamemodes/: Cargo.toml
pmj_gamemodes/src/: lib.rs
pmj_gamemodes/src/base/: gui.rs  mod.rs  mode.rs  shared.rs
pmj_gamemodes/src/v1_simple/: modev1_simple.rs
pmj_server/: Cargo.toml
pmj_server/src/: gui_main.rs  lib.rs  licenses_rust.json  main.rs  server.rs  shared.rs
pmj_server/src/gamemodes/: gui_base.rs  mod.rs  mode_base.rs  modev1_simple.rs
pmj_shared/: Cargo.toml
pmj_shared/src/: async_net.rs  circular.rs  easing.rs  lib.rs  shared.rs  sync_net.rs
pmj_shared/src/gamemodes_shared/: mod.rs  shared_base.rs  sharedv1_simple.rs  sharedv2_better.rs
pmj_test_connection/: Cargo.toml
pmj_test_connection/src/: client.rs  main.rs
scripts/: build_android.py  build_client_desktop.py  build_computer.py  build_license.py  build_script_android.py  build_script_android_old.py  build_script_license.py  build_wasm.py  build_zip.py  license_check.py  zip_client_desktop.py  zip_files.py
scripts/ci/: cargo_msrv.py  get_datetime.py  get_version.py  release.py  rename_apk.py
src/: lib.rs  licenses.rs  licenses_rust.json  licenses_rust.rs  shared.rs
src/client/: client.rs
src/client/ui/: main.slient  main.slint
src/client_test_connection/: client.rs
src/gamemodes_shared/: mod.rs  shared_base.rs  sharedv1_simple.rs  sharedv2_better.rs
src/server/: server.rs
src/server/gamemodes/: mod.rs  mode_base.rs  modev1_simple.rs
src/test_connection/: client.rs
templates/: about_html.hbs  about_json.hbs  about_markdown.hbs  addlicense.template
web/: index.html
