# SPDX-License-Identifier: AGPL-3.0-only
# 著作權所有 (C) 2026 TW0hank0
#
# 本檔案屬於 positive_mahjong 專案的一部分。
# 專案儲存庫：https://github.com/TW0hank0/positive_mahjong
#
# 本程式為自由軟體：您可以根據自由軟體基金會發佈的 GNU Affero 通用公共授權條款
# 第 3 版（僅此版本）重新發佈及/或修改本程式。
#
# 本程式的發佈是希望它能發揮功用，但不提供任何擔保；
# 甚至沒有隱含的適銷性或特定目的適用性擔保。詳見 GNU Affero 通用公共授權條款。
#
# 您應該已經收到一份 GNU Affero 通用公共授權條款副本。
# 如果沒有，請參見 <https://www.gnu.org/licenses/>。

# [package]
# name = "positive_mahjong"
# version.workspace = true
# repository.workspace = true
# authors.workspace = true
# license.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/TW0hank0/positive_mahjong"
license = "AGPL-3.0-only"
authors = ["TW0hank0"]
rust-version = "1.94"


# [[bin]]
# name = "pmj_test_connection"
# path = "src/test_connection/client.rs"

# [[bin]]
# name = "pmj_server"
# path = "src/server/server.rs"

# [[bin]]
# name = "pmj_client"
# path = "src/client/client.rs"

# [[bin]]
# name = "pmj_client"
# path = "pmj_client/src/main.rs" # for computer

# [[bin]]
# name = "pmj_server"
# path = "pmj_server/src/main.rs" # for computer

# [[bin]]
# name = "pmj_test_connection"
# path = "pmj_test_connection/src/client.rs"

# [lib]
# crate-type = ["lib", "rlib", "cdylib"]
# path = "pmj_shared/src/lib.rs"
# name = "pmj_shared_libary"

[workspace.dependencies]
positive_mahjong = { path = "." }
#pmj_client = { path = "pmj_client" }
#pmj_server = { path = "pmj_server" }
pmj_shared = { path = "pmj_shared" }
#pmj_test_connection = { path = "pmj_test_connection" }

iced = { version = "0.14.0" }
local-ip-address = "0.6.10"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["blocking", "native-tls"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
slint = { version = "1.15.1", features = ["backend-android-activity-06"] }
tiny_http = { version = "0.12.0" }
openssl = { version = "0.10", features = ["vendored"] }

[workspace]
resolver = "3"
members = ["pmj_client", "pmj_server", "pmj_shared", "pmj_test_connection"]

[profile.release]
opt-level = 3

[profile.dev]
debug = 2

# [package.metadata.android]
# # 指定目標 API 版本 (需確保已安裝該版本的 Platform)
# target_api = 35
# # 指定最小支援 API 版本
# min_api = 21
