# SPDX-License-Identifier: AGPL-3.0-only
# 著作權所有 (C) 2026 TW0hank0
#
# 本檔案屬於 positive_mahjong 專案的一部分。
# 專案儲存庫：https://github.com/TW0hank0/positive_mahjong
#
# 本程式為自由軟體：您可以根據自由軟體基金會發佈的 GNU Affero 通用公共授權條款
# 第 3 版（僅此版本）重新發佈及/或修改本程式。
#
# 本程式的發佈是希望它能發揮功用，但不提供任何擔保；
# 甚至沒有隱含的適銷性或特定目的適用性擔保。詳見 GNU Affero 通用公共授權條款。
#
# 您應該已經收到一份 GNU Affero 通用公共授權條款副本。
# 如果沒有，請參見 <https://www.gnu.org/licenses/>。

[workspace.package]
authors = ["TW0hank0 <public.email.hank@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/TW0hank0/positive_mahjong"
rust-version = "1.94"
version = "0.1.0"


[workspace.dependencies]
# --- local ---
pmj_gamemodes = { path = "pmj_gamemodes" }
pmj_shared = { path = "pmj_shared" }
positive_mahjong = { path = "." }
# --- shared ---
#iced = { version = "0.15.0", default-features = false, features = ["tiny-skia", "x11", "wayland", "image", "svg", "lazy", "debug", "thread-pool", "linux-theme-detection"] }
image = "0.25.10"
local-ip-address = "0.6.10"
log = "0.4.29"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = [
  "blocking",
  "charset",
  "http2",
  "rustls",
  "system-proxy",
] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tiny_http = { version = "0.12.0", features = ["ssl-rustls"] }
tungstenite = { version = "0.29.0", features = [
  "rustls",
  "rustls-native-certs",
] }
lyon_algorithms = "1.0"


[workspace]
members = ["pmj_client", "pmj_gamemodes", "pmj_server", "pmj_shared"]
resolver = "3"

[profile.release]
debug = false
lto = true
opt-level = 3

[profile.dev]
debug = 2
lto = false
