[package]
name = "pmj_client"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version.workspace = true

[dependencies]
# --- shared ---
log.workspace = true
image.workspace = true
futures = "0.3"
pmj_shared = { workspace = true }
# iced_widget = { version = "0.14", features = ["wgpu"] }
# iced_core = { version = "0.14" }
# iced_winit = { version = "0.14", default-features = false }
# iced_wgpu = { version = "0.14" }
# --- desktop ---
iced = { optional = true, git = "https://github.com/ibaryshnikov/iced.git", rev = "1296490", default-features = false, features = ["wgpu", "tiny-skia", "thread-pool", "debug"] }
# --- android ---
android_logger = {version ="0.14.1", optional=true}
android-activity = { version = "0.6", features = ["native-activity"], optional=true }
ndk-context = {version ="0.1", optional=true}
jni = { version = "0.21", features = ["invocation"], optional=true }
winit = { version = "0.30", optional = true }
# ndk-sys = "0.6.0"
# ndk = "0.9.0"
# --- wasm ---
wasm-bindgen = { version = "0.2", optional=true }
console_error_panic_hook = { version = "0.1.5", optional=true }

[dependencies.iced_core]
git = "https://github.com/ibaryshnikov/iced.git"
rev = "1296490"
# path = "../../iced/core"

[dependencies.iced_widget]
git = "https://github.com/ibaryshnikov/iced.git"
rev = "1296490"
features = ["wgpu"]
# path = "../../iced/widget"

[dependencies.iced_winit]
git = "https://github.com/ibaryshnikov/iced.git"
rev = "1296490"
# path = "../../iced/winit"
default-features = false

[dependencies.iced_wgpu]
git = "https://github.com/ibaryshnikov/iced.git"
rev = "1296490"
# path = "../../iced/wgpu"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"

# [target.'cfg(target_os = "android")'.dependencies]
# android_logger = "0.14.1"
# android-activity = { version = "0.6", features = ["native-activity"] }
# ndk-context = "0.1"

[features]
default = []
desktop = ["dep:iced"]
android = ["dep:android_logger", "dep:android-activity", "dep:ndk-context", "dep:jni", "dep:winit"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]

[[bin]]
name = "pmj_client"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
name = "pmj_client_lib"

[package.metadata.android]
package = "io.github.tw0hank0.positive_mahjong"
apk_name = "pmj_client"
resources = "../res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.application]
label = "pmj_client"
icon = "@mipmap/icon"
# See https://developer.android.com/guide/topics/manifest/application-element#theme
#
# Example shows setting the theme of an application to fullscreen.
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35
max_sdk_version = 36

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
required = true

# See https://developer.android.com/guide/topics/manifest/uses-feature-element
#
# Note: there can be multiple .uses_feature entries.
[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"
max_sdk_version = 18

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"
max_sdk_version = 18

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_WIFI_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_SATEGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE"

[[package.metadata.android.uses_permission]]
name = "android.permission.WAKE_LOCK"

[package.metadata.android.application.activity]
# See https://developer.android.com/guide/topics/manifest/activity-element#screen
#
# Defaults to "unspecified".
orientation = "landscape"
