[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "pmj_client"
repository = { workspace = true }
rust-version.workspace = true
version = { workspace = true }

[dependencies]
# --- shared ---
image = { workspace = true }
log = { workspace = true }
pmj_shared = { workspace = true }
serde_json = { workspace = true }
tungstenite = { workspace = true }
# --- desktop ---
iced = { optional = true, git = "https://github.com/iced-rs/iced.git", rev = "1296490", default-features = false, features = [
    "crisp",
    "debug",
    "linux-theme-detection",
    "thread-pool",
    "time-travel",
    "tiny-skia",
    "wayland",
    "web-colors",
    "wgpu",
    "x11",
] }
# --- android ---
android-activity = { version = "0.6", features = [
    "game-activity",
], optional = true }
android_logger = { version = "0.14.1", optional = true }
futures = { version = "0.3", optional = true }
jni = { version = "0.21", features = ["invocation"], optional = true }
ndk-context = { version = "0.1", optional = true }
winit = { version = "0.30", optional = true }
# --- wasm ---
console_error_panic_hook = { version = "0.1.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dependencies.iced_core]
git = "https://github.com/iced-rs/iced.git"
rev = "1296490"

[dependencies.iced_widget]
features = ["wgpu"]
git = "https://github.com/iced-rs/iced.git"
rev = "1296490"

[dependencies.iced_winit]
default-features = false
git = "https://github.com/iced-rs/iced.git"
rev = "1296490"

[dependencies.iced_wgpu]
git = "https://github.com/iced-rs/iced.git"
rev = "1296490"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.5"
wasm-bindgen = { version = "0.2" }

# [target.'cfg(target_os = "android")'.dependencies]
# android_logger = "0.14.1"
# android-activity = { version = "0.6", features = ["native-activity"] }
# ndk-context = "0.1"

[features]
android = [
    "dep:android-activity",
    "dep:android_logger",
    "dep:futures",
    "dep:jni",
    "dep:ndk-context",
    "dep:winit",
]
default = []
desktop = ["dep:iced"]
wasm = ["dep:console_error_panic_hook", "dep:wasm-bindgen"]

[[bin]]
name = "pmj_client"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "pmj_client_lib"

[package.metadata.android]
apk_name = "pmj_client"
build_targets = ["aarch64-linux-android"]
package = "io.gitlab.tw0hank0.pmj_client"
resources = "../res"

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "pmj_client"
# See https://developer.android.com/guide/topics/manifest/application-element#theme
#
# Example shows setting the theme of an application to fullscreen.
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android.sdk]
max_sdk_version = 36
min_sdk_version = 23
target_sdk_version = 35

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
required = true

# See https://developer.android.com/guide/topics/manifest/uses-feature-element
#
# Note: there can be multiple .uses_feature entries.
[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[[package.metadata.android.uses_permission]]
max_sdk_version = 18
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
max_sdk_version = 18
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_WIFI_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_SATEGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE"

[[package.metadata.android.uses_permission]]
name = "android.permission.WAKE_LOCK"

[package.metadata.android.application.activity]
# See https://developer.android.com/guide/topics/manifest/activity-element#screen
#
# Defaults to "unspecified".
orientation = "landscape"
