# SPDX-License-Identifier: AGPL-3.0-only
# 著作權所有 (C) 2026 TW0hank0
#
# 本檔案屬於 positive_mahjong 專案的一部分。
# 專案儲存庫：https://github.com/TW0hank0/positive_mahjong
#
# 本程式為自由軟體：您可以根據自由軟體基金會發佈的 GNU Affero 通用公共授權條款
# 第 3 版（僅此版本）重新發佈及/或修改本程式。
#
# 本程式的發佈是希望它能發揮功用，但不提供任何擔保；
# 甚至沒有隱含的適銷性或特定目的適用性擔保。詳見 GNU Affero 通用公共授權條款。
#
# 您應該已經收到一份 GNU Affero 通用公共授權條款副本。
# 如果沒有，請參見 <https://www.gnu.org/licenses/>。

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "pmj_client"
repository = { workspace = true }
rust-version.workspace = true
version = { workspace = true }

[dependencies]
# --- shared ---
image = { workspace = true }
log = { workspace = true }
pmj_shared = { workspace = true }
serde_json = { workspace = true }
tungstenite = { workspace = true }
lyon_algorithms = { workspace = true }
# --- desktop ---
iced = { optional = true, git = "https://github.com/iced-rs/iced.git", rev = "1296490", default-features = false, features = [
    "crisp",
    "debug",
    "linux-theme-detection",
    "thread-pool",
    "time-travel",
    "tiny-skia",
    "wayland",
    "web-colors",
    "wgpu",
    "x11",
] }
# --- android ---
android-activity = { version = "0.6", features = [
    "native-activity",
], optional = true }
android_logger = { version = "0.14.1", optional = true }
futures = { version = "0.3", optional = true }
jni = { version = "0.21", features = ["invocation"], optional = true }
ndk-context = { version = "0.1", optional = true }
winit = { version = "0.30", optional = true }
# --- wasm ---
console_error_panic_hook = { version = "0.1.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dependencies.iced_core]
git = "https://github.com/iced-rs/iced.git"
rev = "1296490"

[dependencies.iced_widget]
features = ["wgpu", "canvas"]
git = "https://github.com/iced-rs/iced.git"
rev = "1296490"

[dependencies.iced_winit]
default-features = false
git = "https://github.com/iced-rs/iced.git"
rev = "1296490"

[dependencies.iced_wgpu]
git = "https://github.com/iced-rs/iced.git"
rev = "1296490"

[dependencies.iced_graphics]
git = "https://github.com/iced-rs/iced.git"
rev = "1296490"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.5"
wasm-bindgen = { version = "0.2" }

# [target.'cfg(target_os = "android")'.dependencies]
# android_logger = "0.14.1"
# android-activity = { version = "0.6", features = ["native-activity"] }
# ndk-context = "0.1"

[features]
android = [
    "dep:android-activity",
    "dep:android_logger",
    "dep:futures",
    "dep:jni",
    "dep:ndk-context",
    "dep:winit",
]
default = []
desktop = ["dep:iced"]
wasm = ["dep:console_error_panic_hook", "dep:wasm-bindgen"]

[[bin]]
name = "pmj_client"
path = "src/main.rs"

[lib]
crate-type = ["lib","cdylib"]
name = "pmj_client_lib"

[package.metadata.android]
apk_name = "pmj_client"
build_targets = ["aarch64-linux-android"]
package = "io.gitlab.tw0hank0.pmj_client"
resources = "../res"

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "pmj_client"
# See https://developer.android.com/guide/topics/manifest/application-element#theme
#
# Example shows setting the theme of an application to fullscreen.
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android.sdk]
max_sdk_version = 36
min_sdk_version = 23
target_sdk_version = 35

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
required = true

# See https://developer.android.com/guide/topics/manifest/uses-feature-element
#
# Note: there can be multiple .uses_feature entries.
[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[[package.metadata.android.uses_permission]]
max_sdk_version = 18
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
max_sdk_version = 18
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_WIFI_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_SATEGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE"

[[package.metadata.android.uses_permission]]
name = "android.permission.WAKE_LOCK"

[package.metadata.android.application.activity]
# See https://developer.android.com/guide/topics/manifest/activity-element#screen
#
# Defaults to "unspecified".
orientation = "landscape"
