[package]
name = "pmj_server"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
default-run = "pmj_server"

[dependencies]
local-ip-address = { workspace = true }
serde_json = { workspace = true }
tiny_http = { workspace = true }
pmj_shared = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

[[bin]]
name = "pmj_server"
path = "src/main.rs" # for computer
