[package]
name = "pmj_shared"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license = { workspace = true }

[dependencies]
serde = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["blocking"] }

# [lib]
# crate-type = ["lib", "rlib", "cdylib"]
# path = "src/lib.rs"
