[package]
name = "pmj_test_connection"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/TW0hank0/positive_mahjong"
authors = ["TW0hank0"]

[dependencies]
reqwest.workspace = true
serde_json.workspace = true
pmj_shared.workspace = true

# [[bin]]
# name = "pmj_test_connection"
# path = "src/client.rs"
