[package]
name = "pmj_test_connection"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
pmj_shared = { workspace = true }
serde = { workspace = true }

# [[bin]]
# name = "pmj_test_connection"
# path = "src/client.rs"
